--- a/package.json
+++ b/package.json
@@ -1,12 +1,12 @@
 {
-  "name": "retreaver-ping-app",
+  "name": "retreaver-render-app",
   "version": "1.0.0",
   "main": "server.js",
-  "dependencies": {
-    "express": "^4.18.2",
-    "cors": "^2.8.5"
-  },
   "scripts": {
     "start": "node server.js"
+  },
+  "dependencies": {
+    "express": "^4.18.2",
+    "node-fetch": "^2.6.7"
   }
 }
