--- a/package.json
+++ b/package.json
@@ -1,17 +1,16 @@
 {
-  "name": "retreaver-ping-app",
+  "name": "retreaver-rtb-tester",
   "version": "1.0.0",
-  "private": true,
-  "description": "Proxy server for Retreaver RTB Pings",
+  "description": "Ping form for Retreaver RTB",
   "main": "server.js",
   "scripts": {
-    "start": "node server.js",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "node server.js"
   },
   "dependencies": {
     "express": "^4.18.2"
   },
   "engines": {
     "node": ">=18.0.0"
-  }
+  },
+  "private": true
 }
